--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,16 +8,18 @@
             "name": "run.py - run",
             "type": "debugpy",
             "request": "launch",
-            "program": "${workspaceFolder}/run.py",
+            "program": "${workspaceFolder}/venv_run.py",
             "console": "integratedTerminal",
+            "python": "${workspaceFolder}/venv310/bin/python",
             "args": ["run"],
         },
         {
             "name": "run.py - check",
             "type": "debugpy",
             "request": "launch",
-            "program": "${workspaceFolder}/run.py",
+            "program": "${workspaceFolder}/venv_run.py",
             "console": "integratedTerminal",
+            "python": "${workspaceFolder}/venv310/bin/python",
             "args": ["check"],
         }
     ],
